@@ -8,16 +8,18 @@ DIST xpra-0.7.5.tar.bz2 470377 SHA256 c1129ae0063b315cc1724e466834a373df373c5f9c
 DIST xpra-0.7.8.tar.bz2 471147 SHA256 27f5d0bc2a369a93076ef90fad46a6354e0327033b9139b659d602e9e32c17cb SHA512 d14fdd75c7fd494f4aaae8740ce1a5a7880ae70109ffa7989d346d1b5add56a8117a5851132140f2e8a3aad0f7f3f4a9fe6e2b2f3e9666e469f35fc179fd0af2 WHIRLPOOL c0ed83f90ade9b3a7b0ab728ab090d73277fecb56edc4943295fa19f211b3e41c12dcad6eec9b01932c0a2bb1a6402f8f88deaf25c7f88be01fcf986778c4fd0
 DIST xpra-0.8.1.tar.bz2 579525 SHA256 42a199ee4dfd4c7249feb2ae12d57329ad2797c6c88a9215a748ed1f3d790e44 SHA512 55b9f61ae4e3becff93f058dc3c7f8b4e7abb825f7dad83978e13de5fb0a59415282389cf9863626dfa97edf4b67424230bc7a4e73830d9731edb0d093549c37 WHIRLPOOL 744825b4bfdb61d273ede3db1b3fba52c3983631369d0277adc03630a58f9c8f49eef71fb1453c967e4f9f574a1b0b5b17231c2290872e429febdab98c93f7c2
 DIST xpra-0.8.6.tar.bz2 580532 SHA256 29e0a35eeab17dab6964c7b9c4037cde363bf7d679e29bdf28072fab6449d14f SHA512 33bfcbbf0911fd1d3e1b96cfbeeb2c2db4bfb38b51871dda9a3458f4ed0f28a12e37165ec4b43c6001bc69ef3c2f42e36624e8809d77fffba31a4865013141a8 WHIRLPOOL f33f0bb3d646a3481454410fefece0d66504d88728bfe55eeda0dbc6ec6993e9738ce80ac2a2647712390fce36edc3bafd200793acaf8753cad01778cfdfd0e3
+DIST xpra-0.8.7.tar.bz2 580995 SHA256 ba8bdd0426651646e39329cfdc1fb830dbd7b0967bb13afa3716b5d34ca611b6 SHA512 b891fa2e60f88dc5ed973eb4c059d4533e17496bdcbfa64f08c060295f51c50b1765828b403032174861ea898951b1e5a8661115093e3078542e4f385c3bff53 WHIRLPOOL b3941bb0e40af3a2ebe60d0c48b3d478f46c2f998f0349e641a6779c25161f4ce044394fc719d8d877e04028331100d92286f18549966ab427bc0f58562a3201
 EBUILD xpra-0.7.5.ebuild 2445 SHA256 366c2a4ed58f2773292bac68ef656230d4022e4bcc5a4e70fdfa68303fda19c1 SHA512 edc6080c1df6cb7a7c6c81e1fa85a6a7d0f4d1f6c08a8a15befe8b085c96fecdd899ac869a849ae60bbf4ac77f7b954defaf4844d86db9643e4376c5160ffc2f WHIRLPOOL cd5cf557c8e705efa1ad87abebc751fc79a80c1ca7e0b00997a5bc3e8c234bf4b4209600ff283b8d348a1add6e435f2b8e34dd16e17322e9b448d7b23934efc5
 EBUILD xpra-0.7.8.ebuild 2520 SHA256 be7b5830ac406d6021ae56feee6549bf1e78f3623109c55d95b55b284bd2fbf3 SHA512 9a94a50c0e4f111e333b4545dbcbfd7b54e24e132e40bf57ab9aab881ea2e45127df71f84341fa5eed8e0aef1a6395861759881e537c97586ff9783c664f9838 WHIRLPOOL 1d00d061266bbd8935d37403a470a863af628127fe23b96ab258ab5595c0e9ad28bc7d7f3f011583b211c3758e320ce6c3c9f2f81e3a7424a753620f841769f5
 EBUILD xpra-0.8.1-r1.ebuild 2212 SHA256 47dc88107ca2fd6f84a255d27a85256b5ac130a510699423c98b9f8028640de8 SHA512 59a4648232466397365c8c25a481cc9cde61231bd0a77b79208a4c56c568ac7f54ab301245c709ea39d1cb4a92310ab180cd4895bf40bc669337686f46d568aa WHIRLPOOL 40f75f0a46410bdda6f7069a1cef7b04415c2802a245d35d9a8dcbaf3aeaaac0c49bf64364764590652a9e0f186bea8f87f66f1b70953a6f247d3afaea913859
 EBUILD xpra-0.8.6-r1.ebuild 2504 SHA256 bd5420ce4d10fe8b5464d7f735425a566023e9a8a1e367c248116b08def3b8f2 SHA512 45cfadf4e2cfa08973cb2a4c82089745e3342451a33c93bfe24bce0dbd0d319efb56200edf49b83960e0590d42a25a6286a73aa34f79b3f1a039c666b9be3fc8 WHIRLPOOL a6b9ccfd9ff66de568b8202bb2b885de97dc2f1e30d1c3e0ac8cce9a57ea99f71424783909bb3b9a93f4dd6acaf6790540a99968bc8b0ea819e9aa5150034bb0
-MISC ChangeLog 8024 SHA256 ffea6f0e82e53fd627ba3ac67342edb9b7472f9b35d7b63824fa2b741ebf0962 SHA512 6e0004ed84488212ec85e7fd5c6be97dc218368f3ffc11e27bd682fd00ebf1ffcd798fcff5d58f4f74b0d2343ae214a1ed9a7ebe837ba689cc7251a8a846bb30 WHIRLPOOL 2eafad95a0fb45739f3fe6ff457574b517920aacdd42787544b7bf2b9c30520b7ec30994e564d31729ff63878eba7bf51a81b08224d34229b0e03faa38d76b85
+EBUILD xpra-0.8.7.ebuild 2501 SHA256 b7277dc0440f2e4a83c7ee5253f704236dccc2be4f2fb41c1276408045187697 SHA512 efd42961f102cc7e7b8ce88d0d24cc79534f168b614cd379b9659a5a27d2d10bed2de9a2d86a24dbdcbe11c2a7956bb1fbf6ab34473df8047edb000aad61dc46 WHIRLPOOL 3afd3470f778df9b4b1abdc28f68039e167a099a8c0cd20cc52823eae3757a987c8e29b88b1b289c4549c0845466e5cdafb0ba11fd13f85f8728e7f228306caa
+MISC ChangeLog 8133 SHA256 c51e9d649979e146cdc548317ee31e9b0808367dffbeee01f65f8cff86631119 SHA512 5867a7b86ea57c7422c36d57a77550a347b557024be7b7839b2efb4ba6ed920331c81c6e33eb5055bf42febfff07b66f687595e340a661acec095224ae433226 WHIRLPOOL f4eb8e7f078d64d1eacba3fcbdc3a093d295bf9dc88887c0a04f760bee6f5801411bab3fdb13b42395cb9d88d5190e5fd50b613bebe17e36fd0c93b515555720
 MISC metadata.xml 513 SHA256 5ad186ef732faf537dc7a0ea56199d3ca1dda899b84f6752a45b2b606014146b SHA512 402f753c8cdcfaabbf07098cdfea66e50fa543f1545d65a34bd05acd86df678b56ec74d56fec1f105ee2a6f621fc399ba5f2a1a12b3c66905e4b9f8e0efbc640 WHIRLPOOL 110717d55313a3d6cf6b5326e9358c1f01cadafcb103c3f6cbbb098338cd8652ce317d5433bc315c4b5ee04fef946ffa480f54ac404403f422685afc93451f26
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAlEseeYACgkQknrdDGLu8JCVLwD8Cld7urJt9qE9E6WFkmND6qeW
-ALDZnHDKsxSDJWZFn60A/ilx7P5EbAVpVTkWL7Ie4eOiKIWy5PZcp99jHjyobU8C
-=9GYQ
+iF4EAREIAAYFAlEwbWIACgkQknrdDGLu8JBe9AEAim/iAk7U3ulvEb1p60xlMqR4
+LybuqH2JPC7nt8sfVB0A/2xDf3xb0FqsezSKNjjr8T49lHSeJOnM0thCiwLNsAJ7
+=8fVX
 -----END PGP SIGNATURE-----
